Created navbar and body

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,31 @@
-$primary: rgb(181, 29, 166);
+// Importing all fonts used
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;500;600&family=Barlow+Semi+Condensed:ital,wght@0,400;0,500;0,600;1,300&display=swap');
+@import '../node_modules/bootstrap/scss/functions';
+
+
+$primary: #FFF6F0;
+$secondary: #4C5D63;
+
+
+
+// Navbar
+
+
+.navbar{
+    font-family: 'Barlow Condensed', sans-serif;
+    font-weight:400;
+    font-size:0.8em;
+    --bs-nav-link-hover-color: gray;
+}
+
+.img-cropped{
+    object-fit: cover;
+}
+
+$navbar-toggler-color: rgb(148, 81, 81);
+$navbar-brand-padding-y: 1px;
+$navbar-padding-x:30px;
+
+$nav-link-font-size:2em;
 
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
