--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,31 +1,112 @@
+@use "sass:meta";
+@use "sass:string";
 // Importing all fonts used
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;500;600&family=Barlow+Semi+Condensed:ital,wght@0,400;0,500;0,600;1,300&display=swap');
-@import '../node_modules/bootstrap/scss/functions';
 
 
 $primary: #FFF6F0;
 $secondary: #4C5D63;
+$tertiary: #87AE88;
 
+$enable-shadows:true !default;
+
+@mixin shadow{
+    box-shadow: 1px 4px 2px rgba(0,0,0,0.25);
+}
+
+
+@mixin barlow-condensed{
+    font-family: 'Barlow Condensed', sans-serif;
+}
+
+@mixin barlow-semi-condensed{
+    font-family: 'Barlow Semi Condensed', sans-serif;
+}
 
 
 // Navbar
 
-
 .navbar{
-    font-family: 'Barlow Condensed', sans-serif;
     font-weight:400;
     font-size:0.8em;
-    --bs-nav-link-hover-color: gray;
+    @include barlow-condensed;
+    @include shadow;
 }
+
+
+$navbar-dark-color:white;
+$navbar-dark-hover-color: $tertiary;
 
 .img-cropped{
     object-fit: cover;
 }
 
-$navbar-toggler-color: rgb(148, 81, 81);
 $navbar-brand-padding-y: 1px;
 $navbar-padding-x:30px;
-
 $nav-link-font-size:2em;
+
+// Body
+
+.card-title{
+    font-size: 50px;
+    @include barlow-semi-condensed;
+}
+
+$card-box-shadow: 1px 4px 2px rgba(0,0,0,0.25);
+$card-border-width:0;
+
+$btn-border-radius-lg:90px;
+$btn-padding-y-lg:13px;
+$btn-font-size-lg:23px;
+$btn-font-family: 'Barlow Condensed', sans-serif;
+$btn-font-weight:500;
+$btn-box-shadow: 1px 4px 2px rgba(0,0,0,0.25);
+
+$input-border-radius:90px;
+$input-box-shadow: 1px 4px 2px rgba(0,0,0,0.25);
+
+.img-cropped{
+    border-radius: 10px;
+    @include shadow;
+}
+
+$display-font-family:'Barlow Condensed', sans-serif;
+$display-font-weight:300;
+
+$headings-font-family: 'Barlow Semi Condensed', sans-serif;
+
+
+@import "../node_modules/bootstrap/scss/_functions";
+@import "../node_modules/bootstrap/scss/_variables";
+@import "../node_modules/bootstrap/scss/_variables-dark";
+@import "../node_modules/bootstrap/scss/_maps";
+@import "../node_modules/bootstrap/scss/_mixins";
+@import "../node_modules/bootstrap/scss/_utilities";
+
+$custom-colors:(
+    "villeorange": rgb(227,145,97),
+);
+
+$theme-colors: map-merge($theme-colors, $custom-colors);
+
+$utilities: map-merge(
+  $utilities,
+  (
+    "width": map-merge(
+      map-get($utilities, "width"),
+      (
+        values: map-merge(
+            map-get(map-get($utilities, "width"), "values"),
+            (20:20%,
+            15:15%,
+            10:10%,
+            5:5%),
+            
+        ),
+      ), 
+    ),
+  ),
+);
+
 
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
