--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,3 @@
-@use "sass:meta";
-@use "sass:string";
 // Importing all fonts used
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;500;600&family=Barlow+Semi+Condensed:ital,wght@0,400;0,500;0,600;1,300&display=swap');
 
@@ -75,20 +73,45 @@ $display-font-weight:300;
 
 $headings-font-family: 'Barlow Semi Condensed', sans-serif;
 
+// Footer
 
-@import "../node_modules/bootstrap/scss/_functions";
-@import "../node_modules/bootstrap/scss/_variables";
-@import "../node_modules/bootstrap/scss/_variables-dark";
-@import "../node_modules/bootstrap/scss/_maps";
-@import "../node_modules/bootstrap/scss/_mixins";
-@import "../node_modules/bootstrap/scss/_utilities";
+.fs-2{
+    @include barlow-condensed();
+}
+
+.fs-4{
+    @include barlow-condensed();
+}
+
+
+
+$spacer: 1rem;
+$spacers: (
+  0: 0,
+  1: ($spacer * .25),
+  2: ($spacer * .5),
+  3: $spacer,
+  4: ($spacer * 1.5),
+  5: ($spacer * 3),
+  6: ($spacer * 5),
+  7: ($spacer * 7),
+  8: ($spacer * 9),
+);
+
+@import "../node_modules/bootstrap/scss/functions";
+@import "../node_modules/bootstrap/scss/variables";
+@import "../node_modules/bootstrap/scss/variables-dark";
+@import "../node_modules/bootstrap/scss/maps";
+@import "../node_modules/bootstrap/scss/mixins";
+@import "../node_modules/bootstrap/scss/utilities";
+@import "../node_modules/bootstrap/scss/utilities/api";
 
 $custom-colors:(
     "villeorange": rgb(227,145,97),
 );
 
 $theme-colors: map-merge($theme-colors, $custom-colors);
-
+// Creating more width utilities by merging the existing utilities with my own
 $utilities: map-merge(
   $utilities,
   (
@@ -106,7 +129,7 @@ $utilities: map-merge(
       ), 
     ),
   ),
-);
+);    
 
 
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
