--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,6 @@
   font-weight: 400;
   font-size: 0.8em;
   font-family: "Barlow Condensed", sans-serif;
-  box-shadow: 1px 4px 2px rgba(0, 0, 0, 0.25);
 }
 
 .img-cropped {
@@ -18,7 +17,6 @@
 
 .img-cropped {
   border-radius: 10px;
-  box-shadow: 1px 4px 2px rgba(0, 0, 0, 0.25);
 }
 
 .fs-2 {
@@ -5873,16 +5871,17 @@
   --bs-gray-900: #212529;
   --bs-primary: #FFF6F0;
   --bs-secondary: #4C5D63;
-  --bs-success: #198754;
+  --bs-success: #87AE88;
   --bs-info: #0dcaf0;
   --bs-warning: #ffc107;
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
   --bs-villeorange: rgb(227, 145, 97);
+  --bs-darkertext: rgb(77, 77, 77);
   --bs-primary-rgb: 255, 246, 240;
   --bs-secondary-rgb: 76, 93, 99;
-  --bs-success-rgb: 25, 135, 84;
+  --bs-success-rgb: 135, 174, 136;
   --bs-info-rgb: 13, 202, 240;
   --bs-warning-rgb: 255, 193, 7;
   --bs-danger-rgb: 220, 53, 69;
@@ -5890,7 +5889,7 @@
   --bs-dark-rgb: 33, 37, 41;
   --bs-primary-text-emphasis: #666260;
   --bs-secondary-text-emphasis: #1e2528;
-  --bs-success-text-emphasis: #0a3622;
+  --bs-success-text-emphasis: #364636;
   --bs-info-text-emphasis: #055160;
   --bs-warning-text-emphasis: #664d03;
   --bs-danger-text-emphasis: #58151c;
@@ -5898,7 +5897,7 @@
   --bs-dark-text-emphasis: #495057;
   --bs-primary-bg-subtle: #fffdfc;
   --bs-secondary-bg-subtle: #dbdfe0;
-  --bs-success-bg-subtle: #d1e7dd;
+  --bs-success-bg-subtle: #e7efe7;
   --bs-info-bg-subtle: #cff4fc;
   --bs-warning-bg-subtle: #fff3cd;
   --bs-danger-bg-subtle: #f8d7da;
@@ -5906,7 +5905,7 @@
   --bs-dark-bg-subtle: #ced4da;
   --bs-primary-border-subtle: #fffbf9;
   --bs-secondary-border-subtle: #b7bec1;
-  --bs-success-border-subtle: #a3cfbb;
+  --bs-success-border-subtle: #cfdfcf;
   --bs-info-border-subtle: #9eeaf9;
   --bs-warning-border-subtle: #ffe69c;
   --bs-danger-border-subtle: #f1aeb5;
@@ -5955,15 +5954,15 @@
   --bs-border-radius-xxl: 2rem;
   --bs-border-radius-2xl: var(--bs-border-radius-xxl);
   --bs-border-radius-pill: 50rem;
-  --bs-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  --bs-box-shadow: 1px 4px 2px rgba(0, 0, 0, 0.25);
   --bs-box-shadow-sm: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
   --bs-box-shadow-lg: 0 1rem 3rem rgba(0, 0, 0, 0.175);
   --bs-box-shadow-inset: inset 0 1px 2px rgba(0, 0, 0, 0.075);
   --bs-focus-ring-width: 0.25rem;
   --bs-focus-ring-opacity: 0.25;
   --bs-focus-ring-color: rgba(255, 246, 240, 0.25);
-  --bs-form-valid-color: #198754;
-  --bs-form-valid-border-color: #198754;
+  --bs-form-valid-color: #87AE88;
+  --bs-form-valid-border-color: #87AE88;
   --bs-form-invalid-color: #dc3545;
   --bs-form-invalid-border-color: #dc3545;
 }
@@ -5986,7 +5985,7 @@
   --bs-tertiary-bg-rgb: 43, 48, 53;
   --bs-primary-text-emphasis: #fffaf6;
   --bs-secondary-text-emphasis: #949ea1;
-  --bs-success-text-emphasis: #75b798;
+  --bs-success-text-emphasis: #b7ceb8;
   --bs-info-text-emphasis: #6edff6;
   --bs-warning-text-emphasis: #ffda6a;
   --bs-danger-text-emphasis: #ea868f;
@@ -5994,7 +5993,7 @@
   --bs-dark-text-emphasis: #dee2e6;
   --bs-primary-bg-subtle: #333130;
   --bs-secondary-bg-subtle: #0f1314;
-  --bs-success-bg-subtle: #051b11;
+  --bs-success-bg-subtle: #1b231b;
   --bs-info-bg-subtle: #032830;
   --bs-warning-bg-subtle: #332701;
   --bs-danger-bg-subtle: #2c0b0e;
@@ -6002,7 +6001,7 @@
   --bs-dark-bg-subtle: #1a1d20;
   --bs-primary-border-subtle: #999490;
   --bs-secondary-border-subtle: #2e383b;
-  --bs-success-border-subtle: #0f5132;
+  --bs-success-border-subtle: #516852;
   --bs-info-border-subtle: #087990;
   --bs-warning-border-subtle: #997404;
   --bs-danger-border-subtle: #842029;
@@ -7959,13 +7958,13 @@ progress {
 
 .table-success {
   --bs-table-color: #000;
-  --bs-table-bg: #d1e7dd;
-  --bs-table-border-color: #a7b9b1;
-  --bs-table-striped-bg: #c7dbd2;
+  --bs-table-bg: #e7efe7;
+  --bs-table-border-color: #b9bfb9;
+  --bs-table-striped-bg: #dbe3db;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #bcd0c7;
+  --bs-table-active-bg: #d0d7d0;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #c1d6cc;
+  --bs-table-hover-bg: #d6ddd6;
   --bs-table-hover-color: #000;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
@@ -8119,7 +8118,7 @@ progress {
   background-clip: padding-box;
   border: var(--bs-border-width) solid var(--bs-border-color);
   border-radius: 90px;
-  box-shadow: 1px 4px 2px rgba(0, 0, 0, 0.25);
+  box-shadow: var(--bs-box-shadow-inset);
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -8136,9 +8135,9 @@ progress {
 .form-control:focus {
   color: var(--bs-body-color);
   background-color: var(--bs-body-bg);
-  border-color: #fffbf8;
+  border-color: #87AE88;
   outline: 0;
-  box-shadow: 1px 4px 2px rgba(0, 0, 0, 0.25), 0 0 0 0.25rem rgba(255, 246, 240, 0.25);
+  box-shadow: var(--bs-box-shadow-inset), 0 0 0 0.25rem rgba(255, 246, 240, 0.25);
 }
 .form-control::-webkit-date-and-time-value {
   min-width: 85px;
@@ -8282,7 +8281,7 @@ textarea.form-control-lg {
   }
 }
 .form-select:focus {
-  border-color: #fffbf8;
+  border-color: #87AE88;
   outline: 0;
   box-shadow: var(--bs-box-shadow-inset), 0 0 0 0.25rem rgba(255, 246, 240, 0.25);
 }
@@ -8366,7 +8365,7 @@ textarea.form-control-lg {
   filter: brightness(90%);
 }
 .form-check-input:focus {
-  border-color: #fffbf8;
+  border-color: #87AE88;
   outline: 0;
   box-shadow: 0 0 0 0.25rem rgba(255, 246, 240, 0.25);
 }
@@ -8375,10 +8374,10 @@ textarea.form-control-lg {
   border-color: #FFF6F0;
 }
 .form-check-input:checked[type=checkbox] {
-  --bs-form-check-bg-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='m6 10 3 3 6-6'/%3e%3c/svg%3e");
+  --bs-form-check-bg-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%2387AE88' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='m6 10 3 3 6-6'/%3e%3c/svg%3e");
 }
 .form-check-input:checked[type=radio] {
-  --bs-form-check-bg-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23fff'/%3e%3c/svg%3e");
+  --bs-form-check-bg-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%2387AE88'/%3e%3c/svg%3e");
 }
 .form-check-input[type=checkbox]:indeterminate {
   background-color: #FFF6F0;
@@ -8413,7 +8412,7 @@ textarea.form-control-lg {
   }
 }
 .form-switch .form-check-input:focus {
-  --bs-form-switch-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fffbf8'/%3e%3c/svg%3e");
+  --bs-form-switch-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%2387AE88'/%3e%3c/svg%3e");
 }
 .form-switch .form-check-input:checked {
   background-position: right center;
@@ -8746,7 +8745,7 @@ textarea.form-control-lg {
 .was-validated .form-control:valid, .form-control.is-valid {
   border-color: var(--bs-form-valid-border-color);
   padding-right: calc(1.5em + 0.75rem);
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23198754' d='M2.3 6.73.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%2387AE88' d='M2.3 6.73.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
   background-repeat: no-repeat;
   background-position: right calc(0.375em + 0.1875rem) center;
   background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
@@ -8765,7 +8764,7 @@ textarea.form-control-lg {
   border-color: var(--bs-form-valid-border-color);
 }
 .was-validated .form-select:valid:not([multiple]):not([size]), .was-validated .form-select:valid:not([multiple])[size="1"], .form-select.is-valid:not([multiple]):not([size]), .form-select.is-valid:not([multiple])[size="1"] {
-  --bs-form-select-bg-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23198754' d='M2.3 6.73.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
+  --bs-form-select-bg-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%2387AE88' d='M2.3 6.73.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
   padding-right: 4.125rem;
   background-position: right 0.75rem center, center right 2.25rem;
   background-size: 16px 12px, calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
@@ -8907,7 +8906,7 @@ textarea.form-control-lg {
   --bs-btn-border-color: transparent;
   --bs-btn-border-radius: var(--bs-border-radius);
   --bs-btn-hover-border-color: transparent;
-  --bs-btn-box-shadow: 1px 4px 2px rgba(0, 0, 0, 0.25);
+  --bs-btn-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075);
   --bs-btn-disabled-opacity: 0.65;
   --bs-btn-focus-box-shadow: 0 0 0 0.25rem rgba(var(--bs-btn-focus-shadow-rgb), .5);
   display: inline-block;
@@ -9008,20 +9007,20 @@ textarea.form-control-lg {
 }
 
 .btn-success {
-  --bs-btn-color: #fff;
-  --bs-btn-bg: #198754;
-  --bs-btn-border-color: #198754;
-  --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #157347;
-  --bs-btn-hover-border-color: #146c43;
-  --bs-btn-focus-shadow-rgb: 60, 153, 110;
-  --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #146c43;
-  --bs-btn-active-border-color: #13653f;
+  --bs-btn-color: #000;
+  --bs-btn-bg: #87AE88;
+  --bs-btn-border-color: #87AE88;
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: #99ba9a;
+  --bs-btn-hover-border-color: #93b694;
+  --bs-btn-focus-shadow-rgb: 115, 148, 116;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #9fbea0;
+  --bs-btn-active-border-color: #93b694;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: #198754;
-  --bs-btn-disabled-border-color: #198754;
+  --bs-btn-disabled-color: #000;
+  --bs-btn-disabled-bg: #87AE88;
+  --bs-btn-disabled-border-color: #87AE88;
 }
 
 .btn-info {
@@ -9126,6 +9125,23 @@ textarea.form-control-lg {
   --bs-btn-disabled-border-color: rgb(227, 145, 97);
 }
 
+.btn-darkertext {
+  --bs-btn-color: #fff;
+  --bs-btn-bg: rgb(77, 77, 77);
+  --bs-btn-border-color: rgb(77, 77, 77);
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #414141;
+  --bs-btn-hover-border-color: #3e3e3e;
+  --bs-btn-focus-shadow-rgb: 104, 104, 104;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #3e3e3e;
+  --bs-btn-active-border-color: #3a3a3a;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: rgb(77, 77, 77);
+  --bs-btn-disabled-border-color: rgb(77, 77, 77);
+}
+
 .btn-outline-primary {
   --bs-btn-color: #FFF6F0;
   --bs-btn-border-color: #FFF6F0;
@@ -9161,19 +9177,19 @@ textarea.form-control-lg {
 }
 
 .btn-outline-success {
-  --bs-btn-color: #198754;
-  --bs-btn-border-color: #198754;
-  --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #198754;
-  --bs-btn-hover-border-color: #198754;
-  --bs-btn-focus-shadow-rgb: 25, 135, 84;
-  --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #198754;
-  --bs-btn-active-border-color: #198754;
+  --bs-btn-color: #87AE88;
+  --bs-btn-border-color: #87AE88;
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: #87AE88;
+  --bs-btn-hover-border-color: #87AE88;
+  --bs-btn-focus-shadow-rgb: 135, 174, 136;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #87AE88;
+  --bs-btn-active-border-color: #87AE88;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #198754;
+  --bs-btn-disabled-color: #87AE88;
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: #198754;
+  --bs-btn-disabled-border-color: #87AE88;
   --bs-gradient: none;
 }
 
@@ -9276,6 +9292,23 @@ textarea.form-control-lg {
   --bs-btn-disabled-color: rgb(227, 145, 97);
   --bs-btn-disabled-bg: transparent;
   --bs-btn-disabled-border-color: rgb(227, 145, 97);
+  --bs-gradient: none;
+}
+
+.btn-outline-darkertext {
+  --bs-btn-color: rgb(77, 77, 77);
+  --bs-btn-border-color: rgb(77, 77, 77);
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: rgb(77, 77, 77);
+  --bs-btn-hover-border-color: rgb(77, 77, 77);
+  --bs-btn-focus-shadow-rgb: 77, 77, 77;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: rgb(77, 77, 77);
+  --bs-btn-active-border-color: rgb(77, 77, 77);
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: rgb(77, 77, 77);
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: rgb(77, 77, 77);
   --bs-gradient: none;
 }
 
@@ -10361,7 +10394,7 @@ textarea.form-control-lg {
   --bs-card-border-width: 0;
   --bs-card-border-color: var(--bs-border-color-translucent);
   --bs-card-border-radius: var(--bs-border-radius);
-  --bs-card-box-shadow: 1px 4px 2px rgba(0, 0, 0, 0.25);
+  --bs-card-box-shadow: ;
   --bs-card-inner-border-radius: calc(var(--bs-border-radius) - 0);
   --bs-card-cap-padding-y: 0.5rem;
   --bs-card-cap-padding-x: 1rem;
@@ -10557,7 +10590,7 @@ textarea.form-control-lg {
   --bs-accordion-btn-icon-transform: rotate(-180deg);
   --bs-accordion-btn-icon-transition: transform 0.2s ease-in-out;
   --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23666260'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
-  --bs-accordion-btn-focus-border-color: #fffbf8;
+  --bs-accordion-btn-focus-border-color: #87AE88;
   --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(255, 246, 240, 0.25);
   --bs-accordion-body-padding-x: 1.25rem;
   --bs-accordion-body-padding-y: 1rem;
@@ -10933,6 +10966,13 @@ textarea.form-control-lg {
   --bs-alert-bg: var(--bs-villeorange-bg-subtle);
   --bs-alert-border-color: var(--bs-villeorange-border-subtle);
   --bs-alert-link-color: var(--bs-villeorange-text-emphasis);
+}
+
+.alert-darkertext {
+  --bs-alert-color: var(--bs-darkertext-text-emphasis);
+  --bs-alert-bg: var(--bs-darkertext-bg-subtle);
+  --bs-alert-border-color: var(--bs-darkertext-border-subtle);
+  --bs-alert-link-color: var(--bs-darkertext-text-emphasis);
 }
 
 @keyframes progress-bar-stripes {
@@ -11352,6 +11392,19 @@ textarea.form-control-lg {
   --bs-list-group-active-color: var(--bs-villeorange-bg-subtle);
   --bs-list-group-active-bg: var(--bs-villeorange-text-emphasis);
   --bs-list-group-active-border-color: var(--bs-villeorange-text-emphasis);
+}
+
+.list-group-item-darkertext {
+  --bs-list-group-color: var(--bs-darkertext-text-emphasis);
+  --bs-list-group-bg: var(--bs-darkertext-bg-subtle);
+  --bs-list-group-border-color: var(--bs-darkertext-border-subtle);
+  --bs-list-group-action-hover-color: var(--bs-emphasis-color);
+  --bs-list-group-action-hover-bg: var(--bs-darkertext-border-subtle);
+  --bs-list-group-action-active-color: var(--bs-emphasis-color);
+  --bs-list-group-action-active-bg: var(--bs-darkertext-border-subtle);
+  --bs-list-group-active-color: var(--bs-darkertext-bg-subtle);
+  --bs-list-group-active-bg: var(--bs-darkertext-text-emphasis);
+  --bs-list-group-active-border-color: var(--bs-darkertext-text-emphasis);
 }
 
 .btn-close {
@@ -12863,7 +12916,7 @@ textarea.form-control-lg {
 }
 
 .text-bg-success {
-  color: #fff !important;
+  color: #000 !important;
   background-color: RGBA(var(--bs-success-rgb), var(--bs-bg-opacity, 1)) !important;
 }
 
@@ -12897,6 +12950,11 @@ textarea.form-control-lg {
   background-color: RGBA(var(--bs-villeorange-rgb), var(--bs-bg-opacity, 1)) !important;
 }
 
+.text-bg-darkertext {
+  color: #fff !important;
+  background-color: RGBA(var(--bs-darkertext-rgb), var(--bs-bg-opacity, 1)) !important;
+}
+
 .link-primary {
   color: RGBA(var(--bs-primary-rgb), var(--bs-link-opacity, 1)) !important;
   text-decoration-color: RGBA(var(--bs-primary-rgb), var(--bs-link-underline-opacity, 1)) !important;
@@ -12920,8 +12978,8 @@ textarea.form-control-lg {
   text-decoration-color: RGBA(var(--bs-success-rgb), var(--bs-link-underline-opacity, 1)) !important;
 }
 .link-success:hover, .link-success:focus {
-  color: RGBA(20, 108, 67, var(--bs-link-opacity, 1)) !important;
-  text-decoration-color: RGBA(20, 108, 67, var(--bs-link-underline-opacity, 1)) !important;
+  color: RGBA(159, 190, 160, var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(159, 190, 160, var(--bs-link-underline-opacity, 1)) !important;
 }
 
 .link-info {
@@ -12976,6 +13034,15 @@ textarea.form-control-lg {
 .link-villeorange:hover, .link-villeorange:focus {
   color: RGBA(233, 167, 129, var(--bs-link-opacity, 1)) !important;
   text-decoration-color: RGBA(233, 167, 129, var(--bs-link-underline-opacity, 1)) !important;
+}
+
+.link-darkertext {
+  color: RGBA(var(--bs-darkertext-rgb), var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(var(--bs-darkertext-rgb), var(--bs-link-underline-opacity, 1)) !important;
+}
+.link-darkertext:hover, .link-darkertext:focus {
+  color: RGBA(62, 62, 62, var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(62, 62, 62, var(--bs-link-underline-opacity, 1)) !important;
 }
 
 .link-body-emphasis {
